--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,163 @@
-@charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Poppins:400,600,300,500,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,300italic,400italic,700,700italic);
-*, ::before, ::after {
-  -webkit-transition: all 400ms ease-in-out;
-  transition: all 400ms ease-in-out;
+* {
   box-sizing: border-box;
 }
-body{
+body {
   margin: 0;
 }
-h1{
+h1 {
   position: absolute;
   left: 50%;
-  font-family: glitch;
   color: red;
   top: 5%;
-  font-size: 40px;
+  font-size: XXX-large;
+  font-family: glitch;
+}
+@font-face {
+  font-family: glitch;
+  src: url(./assets/glitch-progressive.ttf);
 }
 
-@font-face{
-  font-family: glitch;
-  src:url(./glitch-progressive.ttf)
+#menu {
+  width: 100vw;
+  height: 100vh;
+  background-image: url(./assets//faug\ \(2\).jpg);
+  background-repeat: no-repeat;
+  background-blend-mode: lighten;
+  background-position: 850px;
 }
-#menu-menu {
+li a {
+  color: inherit;
+  text-decoration: none;
+
+}
+li{
+  margin-bottom: 2%;
+}
+li a .text {
+  text-align: right;
+  transition-property: right;
+  white-space: nowrap;
+}
+.faug {
+  /* background: #092329; */
+  font-family: glitch, Geneva, Tahoma, sans-serif;
+  padding: 10% 5%;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  font-weight: 700;
+}
+.faug menu {
+  perspective: 200px;
+  perspective-origin: 0 18.5%;
+}
+#main-menu {
   position: fixed;
   top: 1em;
   left: 1em;
   z-index: 9001;
 }
 
-#menu {
-  width: 100vw;
-  height: 100vh;
-  background-image: url(./faug\ \(2\).jpg);
-  background-repeat: no-repeat;
-  background-blend-mode: lighten;
-  background-position: 531px;
-}
-
-li a {
-  color: inherit;
-  text-decoration: none;
-}
-li a .text {
-  text-align: right;
-  -webkit-transition-property: right;
-  transition-property: right;
-  white-space: nowrap;
-}
-
-.faug {
-  background: #1a2845;
-  font-family: 'Roboto Condensed', sans-serif;
-  padding: 10% 5%;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-flow: row;
-  -webkit-box-align: center;
-          align-items: center;
-}
-.faug menu {
-  -webkit-perspective: 200px;
-          perspective: 200px;
-  -webkit-perspective-origin: 0 18.5%;
-          perspective-origin: 0 18.5%;
-}
 .faug a {
   text-align: right;
   width: 33vw;
-  color: rgba(255, 255, 255, 0.8);
-  text-shadow: 1px 2px 0.025em black;
+  color: #8d0e14;
   font-weight: 500;
   font-size: 24px;
   letter-spacing: 0.01em;
   padding: 2% 0;
   padding-right: 0.8em;
-  display: block; 
-background: linear-gradient(90deg, rgba(107,166,212,1) 0%, rgba(4,62,61,1) 56%);
-    background-size: 400% 100%;
-  margin-bottom: 0.15em;
-          clip-path: polygon(0% 0%, 97.5% 0, 100% 25%, 100% 100%, 0% 100%);
+  display: block;
+  background: linear-gradient(
+    90deg,
+    rgba(107, 166, 212, 1) 0%,
+    rgba(4, 62, 61, 1) 56%
+  );
+  background-size: 400% 100%;
+  background-size: 400% 100%;
+  margin-bottom: 0;
+  clip-path: polygon(0% 0%, 95% 0, 100% 25%, 100% 100%, 0% 100%);
 }
 .faug a::after {
-  content: " ";
+  content: "";
 }
-.faug menu ul a:focus, .faug menu ul a:hover {
-  -webkit-transition: all 400ms ease-in-out;
+
+.faug menu ul a:focus,
+.faug.menu ul a:hover {
   transition: all 400ms ease-in-out;
   background-size: 100% 100%;
+}
+
+html {
+  background-color: #000;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.player-model {
+  width: 500px;
+  height: 570px;
+  margin-top: 70px;
+  background-image: url(./assets/robot-removebg-preview.png);
+  animation: float 1s infinite alternate;
+  margin-left: 22%;
+}
+
+.hologram {
+  position: absolute;
+  margin-left: 70%;
+  margin-top: 45%;
+  z-index: 2;
+  width: 150px;
+  height: 5px;
+  background-color: rgba(0, 252, 252, 0.35);
+  border-radius: 100%;
+  filter: blur(2.5px);
+  transform: perspective(100px) rotateX(-30deg);
+  transform-style: preserve-3d;
+  animation: hologramgraphic 1.5s infinite alternate;
+}
+
+@keyframes float {
+  from {
+    will-change: unset;
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+  }
+  to {
+    will-change: transform;
+    -webkit-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+}
+
+@keyframes hologramgraphic {
+  from {
+    will-change: box-shadow;
+    
+    box-shadow: 0 -75px 5px rgba(0, 252, 252, 0.15),
+      0 -1px 2px rgba(0, 252, 252, 0.5), 0 -45px 5px rgba(0, 252, 252, 0.15),
+      0 -2px 3px rgba(0, 252, 252, 0.5), 0 -3px 4px rgba(0, 252, 252, 0.5),
+      0 -4px 6px rgba(0, 252, 252, 0.5), 0 -5px 10px rgba(0, 252, 252, 0.75),
+      0 -7px 20px rgba(0, 252, 252, 0.75), 0 -10px 30px rgba(0, 252, 252, 0.75),
+      0 -15px 40px rgba(0, 252, 252, 0.75), 0 -25px 50px rgba(0, 252, 252, 0.75),
+      0 -35px 60px rgba(0, 252, 252, 0.85), 0 -45px 70px rgba(0, 252, 252, 0.95),
+      0 -65px 80px #00fcfc, 0 -75px 90px #00fcfc;
+  }
+  to {
+    will-change: unset;
+    box-shadow: 0 -1px 5px rgba(0, 252, 252, 0.15),
+      0 -1px 2px rgba(0, 252, 252, 0.5), 0 -1px 5px rgba(0, 252, 252, 0.15),
+      0 -2px 3px rgba(0, 252, 252, 0.5), 0 -3px 4px rgba(0, 252, 252, 0.5),
+      0 -4px 6px rgba(0, 252, 252, 0.5), 0 -5px 7px rgba(0, 252, 252, 0.75),
+      0 -7px 10px rgba(0, 252, 252, 0.75), 0 -10px 15px rgba(0, 252, 252, 0.75),
+      0 -15px 20px rgba(0, 252, 252, 0.75), 0 -25px 25px rgba(0, 252, 252, 0.75),
+      0 -35px 30px rgba(0, 252, 252, 0.85), 0 -45px 35px rgba(0, 252, 252, 0.95),
+      0 -65px 40px #00fcfc, 0 -75px 50px #00fcfc;
+  }
 }
